--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+    height: 100%;
+}
+
+#sidebar {
+    height: 100%;
+    min-height: 100vh;
+    min-width: 180px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 250px;
+    background: #333;
+    color: #fff;
+}
