--- a/src/app/gifs/results-gifs/results-gifs.component.html
+++ b/src/app/gifs/results-gifs/results-gifs.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-    <div class="col-md-4 col-sm-6" *ngFor="let gif of results">
+    <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn" 
+        *ngFor="let gif of results">
         <div class="card" >
-            <img [src]="gif.images.downsized_medium.url" class="card-img-top" alt="...">
+            <img [src]="gif.images.downsized_medium.url" class="card-img-top" alt="gif.title">
             <div class="card-body">
-            <h5 class="card-title">{{ gif.title }}</h5>
-            <p class="card-text">{{ gif.username }}</p>
+            <h6 class="card-title">{{ gif.title }}</h6>
             </div>
         </div>
     </div>
