--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,6 +2,9 @@
     <h3 class="text-light">GifsApp</h3>
     <hr>
     <div class="list-group list-reset" >
-      <a *ngFor="let item of history" href="#" class="list-group-item list-group-item-action">{{item | titlecase}}</a>
+      <a *ngFor="let item of history" 
+        (click)="search(item)"
+        href="#" 
+        class="list-group-item list-group-item-action">{{item | titlecase}}</a>
     </div>
   </div>
